--- a/_config.yml
+++ b/_config.yml
@@ -131,15 +131,15 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#404040"
-text-col: "#fff"
+page-col: "#0f0f11"
+text-col: "#ffffff"
 link-col: "#008AFF"
 hover-col: "#404040"
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
+navbar-col: "#0f0f11"
+navbar-text-col: "#ffffff"
 navbar-border-col: "#DDDDDD"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
+footer-col: "#0f0f11"
+footer-text-col: "#ffffff"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
 
