--- a/_config.yml
+++ b/_config.yml
@@ -131,14 +131,14 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#0f0f11"
+page-col: "#F1F7EE"
 text-col: "#ffffff"
 link-col: "#008AFF"
 hover-col: "#404040"
-navbar-col: "#0f0f11"
+navbar-col: "#F1F7EE"
 navbar-text-col: "#ffffff"
 navbar-border-col: "#DDDDDD"
-footer-col: "#0f0f11"
+footer-col: "#F1F7EE"
 footer-text-col: "#ffffff"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
