--- a/_config.yml
+++ b/_config.yml
@@ -131,17 +131,19 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#F1F7EE"
-text-col: "#ffffff"
-link-col: "#008AFF"
-hover-col: "#404040"
-navbar-col: "#F1F7EE"
-navbar-text-col: "#ffffff"
-navbar-border-col: "#DDDDDD"
-footer-col: "#F1F7EE"
+page-col: "#F2F3F7"
+text-col: "#000"
+link-col: "#252664"
+hover-col: "#151A30"
+
+navbar-col: "#151A30"
+navbar-text-col: "#F2F3F7"
+navbar-border-col: "#9194BA"
+
+footer-col: "#151A30"
 footer-text-col: "#ffffff"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-link-col: "#F2F3F7"
+footer-hover-col: "#9194BA"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
@@ -255,7 +257,7 @@ date_format: "%B %-d, %Y"
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "America/Phoenix"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
