editing the menu

--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ author: Mihir Aranala
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  About Me: "index"
+  Awards: "awards"
+  Projects: "projects"
+  
+  
 
 ################
 # --- Logo --- #
