--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ navbar-links:
   About Me: "index"
   Awards: "awards"
   Projects: "projects"
+  Linkedin: "https://www.linkedin.com/in/mihiraranala"
   
   
 
