--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Mihir Aranala
 navbar-links:
   About Me: "index"
   Awards: "awards"
-  Projects: "projects"
+  Projects: "projects-list.html/#projects"
   Linkedin: "https://www.linkedin.com/in/mihiraranala"
   
   
